--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "4.0.1",
+    "react-service-worker": "^0.1.1",
+    "react-workbox": "^0.5.9",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
