--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
     {
       "src": "favicon.ico",
       "sizes": "48x48",
-      "type": "image/x-icon"
+      "type": "image/x-icon",
+      "purpose": "any maskable"
     },
     {
       "src": "meet-app-192.png",
