--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "4.0.1",
     "react-service-worker": "^0.1.1",
     "react-workbox": "^0.5.9",
+    "recharts": "^2.0.6",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
